--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "analyze": "ANALYZE=true pnpm build"
   },
   "dependencies": {
+    "@blocknote/core": "^0.13.5",
+    "@blocknote/mantine": "^0.13.5",
+    "@blocknote/react": "^0.13.5",
     "@next/bundle-analyzer": "^14.0.4",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
